# GitanElyon.github.io

./: Cargo.toml  Dioxus.toml  README.md  flake.nix  index.html  script.js  styles.css
.github/workflows/: deploy.yml
assets/styling/: about.css  background.css  base.css  components.css  contact.css  home-about.css  home-career.css  home-contact.css  home-hero.css  home-projects.css  home-skills.css  main.css  navbar.css  projects.css  responsive.css  resume.css
src/: main.rs
src/components/: background.rs  floating_scrollbar.rs  hero.rs  mod.rs  project_card.rs  skill_badge.rs
src/data/: mod.rs  projects.rs  resume.rs  skills.rs
src/views/: about.rs  contact.rs  home.rs  mod.rs  navbar.rs  projects.rs  resume.rs
styles/: footer.css  header.css  projects.css  skills.css
views/: about.html  footer.html  header.html  projects.html  skills.html
